# cuda-kernel-optimization

./: CMakeLists.txt  README.md  benchmark.cu  main.cu
docker/: Dockerfile  docker-compose.yml
include/: matmul_1d_block_tiling.h  matmul_2d_block_tiling.h  matmul_base.h  matmul_coalescing.h  matmul_cublas.h  matmul_naive.h  matmul_smem_block.h  matmul_smem_vectorize.h  matmul_warp_tiling.h
src/: matmul_1d_block_tiling.cu  matmul_2d_block_tiling.cu  matmul_base.cu  matmul_coalescing.cu  matmul_cublas.cu  matmul_naive.cu  matmul_smem_block.cu  matmul_smem_vectorize.cu  matmul_warp_tiling.cu
